# Graph_Algorithms

./: CMakeLists.txt  README.md
inc/algorithms/: BellmanFord.h  Dijkstra.h  Kruskal.h  Prim.h
inc/structures/: AdjacencyList.h  EdgesList.h  IncidenceMatrix.h
inc/ui/: Menu.h
inc/utilities/: GenerateGraph.h  ReadGraph.h  Test.h  TransformGenerated.h
src/algorithms/: BellmanFord.cpp  Dijkstra.cpp  Kruskal.cpp  Prim.cpp
src/app/: Main.cpp
src/structures/: AdjacencyList.cpp  IncidenceMatrix.cpp
src/ui/: Menu.cpp
src/utilities/: GenerateGraph.cpp  ReadGraph.cpp  Test.cpp  TransformGenerated.cpp
